# evensteven

./: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS.md
.github/workflows/: ci.yml
config/: default_config.json
cpp/: CMakeLists.txt
cpp/include/evensteven/: audio_io.h  balance.h  config.h  export.h  features.h  logging.h  loudness.h  preprocessing.h  scoring.h  segmentation.h
cpp/src/: audio_io.cpp  balance.cpp  config.cpp  export.cpp  features.cpp  logging.cpp  loudness.cpp  main.cpp  preprocessing.cpp  scoring.cpp  segmentation.cpp
cpp/tests/: CMakeLists.txt  test_audio_io.cpp  test_balance.cpp  test_export.cpp  test_loudness.cpp  test_preprocessing.cpp  test_segmentation.cpp
examples/expected_outputs/: analysis.json
gui/: components.json  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gui/electron/: engine.ts  main.ts  preload.cjs  preload.ts
gui/src/: App.tsx  index.css
gui/src/components/: AudioImport.tsx  BalanceChart.tsx  ExportPanel.tsx  LoudnessChart.tsx  ProgressIndicator.tsx  RecommendationsList.tsx  SectionAnalysis.tsx  SetlistBarChart.tsx  SongCard.tsx
gui/src/components/ui/: dialog.tsx
gui/src/lib/: store.ts
gui/src/pages/: AnalysisPage.tsx  HomePage.tsx  ProjectPage.tsx
matlab/: compute_secondary_metrics.m  generate_all_plots.m  generate_summary_report.m  load_project_data.m  plot_section_balance.m  plot_setlist_comparison.m  plot_song_summary.m  validate_exports.m
matlab/examples/: demo_workflow.m
scripts/: generate_demo_audio.py
